updated gemfile and config

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Think on the Clock
-description: Front-end development, and everything that goes along with it.
+name: Good eats.
+description: The recipes that fuel KM Adventure Co.
 avatar: /images/bbd.png
 
 footer-links:
